--- a/Makefile-progress
+++ b/Makefile-progress
@@ -6,40 +6,78 @@
 #    By: mrantil <mrantil@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/02/08 17:55:24 by mrantil          ###   ########.fr        #
+#    Updated: 2022/02/08 17:47:04 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
-SRCS_PATH = srcs/
-SRCS = $(SRCS_PATH)ft_printf.c $(SRCS_PATH)check_ptr.c $(SRCS_PATH)int_print.c \
-	$(SRCS_PATH)char_print.c $(SRCS_PATH)str_print.c $(SRCS_PATH)uint_print.c \
-	$(SRCS_PATH)oct_print.c $(SRCS_PATH)hex_print.c
-O_FILES = ft_printf.o check_ptr.o int_print.o char_print.o str_print.o uint_print.o \
-	oct_print.o hex_print.o
-FLAGS = -Wall -Werror -Wextra
+SRCS_PATH = srcs
+
 LIBFT = libft
+LIBFT_DIR = libft
+
+CC = gcc
+CFLAGS = -Wall -Werror -Wextra
+
+
+FUNCTIONS =	ft_printf \
+ 			check_ptr \
+			int_print \
+			char_print \
+			str_print \
+			uint_print \
+			oct_print \
+			hex_print
+
+INCLUDE_DIRS = $(SRCS_PATH) $(LIBFT_DIR)
+
+SOURCES = $(foreach function, $(FUNCTIONS), $(SRCS_PATH)/$(function).c)
+
+OBJECTS = $(foreach function, $(FUNCTIONS), $(OBJ_DIR)/$(function).o)
+
+OBJ_DIR = $(SRCS_PATH)/objects
+
+INC = includes/ libft/
 
 all: $(NAME)
 
-$(NAME):
+$(LIBFT):
 	@echo "Compiling(libft)..."
 	@make -C libft
+	@echo "libft complete."
+
+$(NAME): $(OBJECTS)
 	@echo "Compiling(libftprintf)..."
-	@gcc $(FLAGS) -c $(SRCS)
-# $(LIBFT)
-	@ar rc $(NAME) $(O_FILES)
+#	@$(CC) $(CFLAGS) -c $(SRCS) $(INC)
+
+$(OBJECTS): $(SOURCES) | directories
+	@$(CC) $(CFLAGS) -c $(patsubst %.o, $(SRCS_PATH/)%.c, $(notdir $@)) -o $@ \
+		$(foreach i, $(INC), -I$(i))
+
+directories:
+	@mkdir -p $(OBJ_DIR)
+
+	@ar rc $(NAME) $(OBJECTS)
 	@echo "$(NAME) created"
 	@ranlib $(NAME)
 	@echo "$(NAME) indexed"
-#after this line is just for testing, erase later
-	@gcc main.c libftprintf.a libft/libft.a -g
+# $(CC) $(CFLAGS) $^ -o $@ \  
+# @$(CC) $(CFLAGS) -c $(SRCS) $(INC)
+	@echo "libftprintf complete."
+
+
+
+
+
+
+#after this line is just for testing, erase later	
 	@echo "Compiling main.c..."
+	@gcc main.c libftprintf.a libft/libft.a -g
 	@echo '\n'a.out ready to \(run\)fire!
 
 clean:
 	@echo "Cleaning object files..."
-	@rm -f $(O_FILES)
+	@rm -f $(OBJECTS)
 	@make -C libft clean
 
 fclean: clean
