--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: mrantil <mrantil@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/02/12 18:30:19 by mrantil          ###   ########.fr        #
+#    Updated: 2022/02/12 20:21:45 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,13 +28,14 @@ _DEPS = libftprintf.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
 FUNCTIONS = ft_printf \
-			check_parser \
+			parser_loop \
 			int_print \
 			char_print \
 			str_print \
 			uint_print \
 			oct_print \
 			hex_print \
+			address_print \
 			flags
 
 #			binary_print \
