--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: mrantil <mrantil@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/02/12 21:11:25 by mrantil          ###   ########.fr        #
+#    Updated: 2022/02/14 13:20:16 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,7 +37,8 @@ FUNCTIONS = ft_printf \
 			hex_print \
 			address_print \
 			asterix_print \
-			flags
+			flags \
+			check_width
 
 #			binary_print \
 
