--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: mrantil <mrantil@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/02/19 23:13:55 by mrantil          ###   ########.fr        #
+#    Updated: 2022/03/02 17:36:07 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,6 +36,7 @@ FUNCTIONS = ft_printf \
 			oct_print \
 			hex_print \
 			address_print \
+			float_print \
 			asterix_print \
 			binary_print \
 			null_print \
