--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: mrantil <mrantil@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/03/17 14:28:03 by mrantil          ###   ########.fr        #
+#    Updated: 2022/03/24 18:19:20 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,7 +43,8 @@ FUNCTIONS = ft_printf \
 			flags_plus_minus_hash_null \
 			flags_proc_zero_space \
 			check_width_and_precision \
-			check_length
+			check_length \
+			tools
 
 _OBJ = $(foreach function, $(FUNCTIONS), $(function).o)
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
