--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mrantil <mrantil@student.42.fr>            +#+  +:+       +#+         #
+#    By: mrantil <mrantil@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/26 15:01:43 by mrantil           #+#    #+#              #
-#    Updated: 2022/03/25 13:48:09 by mrantil          ###   ########.fr        #
+#    Updated: 2022/03/27 13:03:13 by mrantil          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
